[imad-console] Updates article-one.html

--- a/article-one.html
+++ b/article-one.html
@@ -1,2 +1,23 @@
 <html>
-<html/>
+  <head>
+     <title>
+         article one| sai rohith
+     </title>
+  </head>  
+  <body>
+      <div>
+          <a href="/">Home</a>
+      </div>
+      <h>
+          article one
+      </h>
+      <div>
+          sept 21,2016
+      </div>
+      <div>
+          <p>
+              this is my first webpage.my name is sairohith.just started learning the things
+          </p>          
+      </div>
+  </body>
+</html>
