--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -15,9 +15,16 @@
           sept 21,2016
       </div>
       <div>
+         
           <p>
               this is my first webpage.my name is sairohith.just started learning the things
-          </p>          
-      </div>
+          </p>  
+          <p>
+              this is my first webpage.my name is sairohith.just started learning the things
+          </p>     
+          <p>
+              this is my first webpage.my name is sairohith.just started learning the things
+          </p>     
+      </div>      
   </body>
 </html>
