[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,7 @@
      <title>
          article one| sai rohith
      </title>
+     <meta name="viewport" context="width=device-width,inital-scale=1"/>
   </head>  
   <body>
       <div>
