[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,14 @@
          article one| sai rohith
      </title>
      <meta name="viewport" context="width=device-width,inital-scale=1"/>
+     <style>
+         .container{
+             max-width:800px
+             margin:0 meta;
+             color:grey;
+             font-family:sans-serif;
+         }
+     </style>
   </head>  
   <body>
       <div>
@@ -15,7 +23,7 @@
       <div>
           sept 21,2016
       </div>
-      <div>
+      <div class="container">
          
           <p>
               this is my first webpage.my name is sairohith.just started learning the things
