--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,6 +4,8 @@
          article two| sai rohith
      </title>
      <meta name="viewport" context="width=device-width,inital-scale=1"/>
+      <link href="/ui/style.css" rel="stylesheet" />
+     
   </head>  
   <body>
       <div>
@@ -15,7 +17,7 @@
       <div>
           sept 21,2016
       </div>
-      <div>
+      <div class="container">
          
           <p>
               this is my second webpage.my name is sairohith.just started learning the things
