[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,12 @@
         <div class="center text-big bold">
             Hi!raa vineeth.
         </div>
+        <script>
+            alert('hi iam javascript!');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
+        
+        
     </body>
 </html>
