[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi!raa vineeth.
+            Hi!my name is sairohith.
         </div>
         <script>
             alert('hi iam javascript!');
