--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,10 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class="container">
+          <div class="center">
+            <img  id='madi' src="http://cf.mp-cdn.net/77/e5/ed1cec4dd1f12f69469ae9578845-should-women-be-good-managers-than-men.jpg" class="img-medium"/>
+          </div>
         </div>
         <br>
         <div class="center text-big bold">
