--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,10 @@
         <div class="center text-big bold">
             Hi!my name is sairohith.
         </div>
+    <div class="footer">
+        This button <button id="counter"> click me!</button> is clicked <span id="count">0</span> times
+        
+    </div>    
         <script>
             alert('hi iam javascript!');
         </script>
