[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
         This button <button id="counter"> click me!</button> is clicked <span id="count"> 0 </span> times
         
         <br/>
-        <input type="text" id="name" placeholder="NAME"></input>
+        <input type="text" id="name" placeholder="name"></input>
         <input type="Submit" value="submit" id="submit_btn"></input>
        <ul id="fuck"> 
       
