[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -20,9 +20,9 @@
         <input type="text" id="name" placeholder="name"/>
         <input type="Submit" value="submit" id="submit_btn"/>
         <hr/>
-        <input type="text" id="name1" placeholder="username"/>
+        <input type="text" id="username" placeholder="username"/>
         <input type="password" id="password"/>
-        <input type="submit" id="submit_btn1"/>
+        <input type="submit" id="submit_btnn"/>
         
        
         </div>
