--- a/ui/index.html
+++ b/ui/index.html
@@ -4,11 +4,11 @@
   <h1>Styles Conference</h1>
   <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
    <nav>
-    <a href="sairohithareti.imad.hasura-app.io/index">Home</a>
-    <a href="sairohithareti.imad.hasura-app.io/speakers">Speakers</a>
-    <a href="sairohithareti.imad.hasura-app.io/Schedule"></a>
-    <a href="sairohithareti.imad.hasura-app.io/Venue">Venue</a>
-    <a href="sairohithareti.imad.hasura-app.io/register">Register</a>
+    <a href="/index">Home</a>
+    <a href="/speakers">Speakers</a>
+    <a href="/Schedule"></a>
+    <a href="/Venue">Venue</a>
+    <a href="/register">Register</a>
   </nav>
   </header>
 <section>
