--- a/ui/index.html
+++ b/ui/index.html
@@ -21,19 +21,19 @@
   <h2>Dedicated to the Craft of Building Websites</h2>
   <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
 </section>
-<section class="container">
+<section class="container grid ">
 
-  <section class="container" >
+  <section class="container col-1-3" >
     <h5>Speakers</h5>
     <h3>World-Class Speakers</h3>
     <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
   </section>
-  <section  class="container">
+  <section  class="container col-1-3">
       <h5>Schedule</h5>
       <h3>Three Inspring days</h3>
       <p> enjoy three inspiring and action packed days of talk,gatherings and all around good times</p>
   </section>
-  <section  class="container">
+  <section  class="container col-1-3">
       <h5>Venue</h5>
       <h3>The chicago theatre</h3>
       <p>with in the heart of down town of chicago</p>
