--- a/ui/index.html
+++ b/ui/index.html
@@ -18,6 +18,7 @@
     <a href="/register">Register</a>
   </nav>
   </header>
+  <div>
 <section class="container">
   <h2>Dedicated to the Craft of Building Websites</h2>
   <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
@@ -46,6 +47,8 @@
 <footer class=" primary-footer container group" >
     
 </footer >
+</div>
+
 </body>
 
         
