[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,9 +37,12 @@
       <p> enjoy three inspiring and action packed days of talk,gatherings and all around good times</p>
   </section>
   <section  class=" col-1-3">
-      <h5>Venue</h5>
-      <h3>The chicago theatre</h3>
-      <p>with in the heart of down town of chicago</p>
+      <h5>login</h5>
+      <h3>enjoy awesome features</h3>
+      <input type="text" id="username" placeholder="username"/>
+        <input type="password" id="password"/>
+        <input type="submit" id="submit_btnn"/>
+
   </section>
 
 </section>
