--- a/ui/index.html
+++ b/ui/index.html
@@ -39,7 +39,7 @@
   <section  class=" col-1-3">
       <h5>login</h5>
       <h3>enjoy awesome features</h3>
-      <input type="text" id="username" placeholder="username"/>
+      <input type="text" id="name" placeholder="username"/>
         <input type="password" id="password"/>
         <input type="submit" id="submit_btnn"/>
 
