[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,9 +12,9 @@
   <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
    <nav class="primary-nav">
    
-    <a href="/index">Home</a>
-    <a href="/speakers">Speakers</a>
-    <a href="/Schedule"></a>
+    <a href="/home">Home</a>
+    <a href="ui/article.two">ABOUT ME</a>
+    <a href="ui/article.one">comments</a>
     <a href="/Venue">Venue</a>
     <a href="/register">Register</a>
   </nav>
@@ -27,12 +27,12 @@
 <section class=" grid ">
 
   <section class=" col-1-3" >
-    <h5>Speakers</h5>
-    <h3>World-Class Speakers</h3>
-    <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+    <h5>ABOUT</h5>
+    <h3>SAI ROHITH ARETI</h3>
+    <p>knowing about me ,my qualites,my hobbies,my interests </p>
   </section>
   <section  class=" col-1-3">
-      <h5>Schedule</h5>
+      <h5></h5>
       <h3>Three Inspring days</h3>
       <p> enjoy three inspiring and action packed days of talk,gatherings and all around good times</p>
   </section>
@@ -43,6 +43,11 @@
         <input type="password" id="password"/>
         <input type="submit" id="submit_btnn"/>
 
+  </section>
+  <section class="col-1-3">
+       <input type="text" id="name" placeholder="name"/>
+       <input type="Submit" value="submit" id="submit_btn"/>
+ 
   </section>
 
 </section>
